# RL-2048

./: .gitignore  README.md  build.sh  plot.py
RL2048/: CMakeLists.txt  build.sh  plot.py
RL2048/headers/: Board.hpp  Ensemble.hpp  Model.hpp  NTuple.hpp  NTupleInterface.hpp  Normalize.hpp  ScoreSaver.hpp  ScoreWriter.hpp  SymmetryExpander.hpp  TD.hpp  helpers.hpp  random.hpp
RL2048/src/: Board.cpp  Ensemble.cpp  NTuple.cpp  Normalize.cpp  ScoreSaver.cpp  ScoreWriter.cpp  TD.cpp  helpers.cpp  main.cpp
front-end/: index.html  package-lock.json  package.json
front-end/src/: board.js  main.js
front-end/src/assets/scss/: main.scss
front-end/src/components/: BoardView.vue  Cell.vue  GameEndOverlay.vue  Home.vue  TileView.vue
game/: game.py  ntuple.py  unit.py
headers/: Board.hpp  Ensemble.hpp  Model.hpp  NTuple.hpp
src/: Board.cpp  Ensemble.cpp  ScoreWriter.cpp  main.cpp
